# Neos

./: .gitmodules  .tkb  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: glossary.md
neos/: CMakeLists.txt
neos/communication/: CMakeLists.txt
neos/communication/slotsAndSignals/: CMakeLists.txt
neos/communication/slotsAndSignals/include/: signals.hpp
neos/communication/slotsAndSignals/src/: signals.cpp
neos/communication/sockets/: CMakeLists.txt
neos/communication/sockets/include/: socketProxy.hpp  socketsWrapper.hpp
neos/communication/sockets/src/: socketProxy.cpp  socketsWrapper.cpp
neos/communication/tcpIpServer/: CMakeLists.txt
neos/communication/tcpIpServer/include/: tcpIpServer.hpp
neos/communication/tcpIpServer/src/: tcpIpServer.cpp
neos/configs/: CMakeLists.txt
neos/configs/include/: eConfigs.hpp  sysDefines.hpp
neos/configs/src/: systemConfigs.cpp
neos/core/: CMakeLists.txt
neos/core/htonProxy/: CMakeLists.txt
neos/core/htonProxy/include/: htonProxy.h
neos/core/htonProxy/src/: htonProxy.c
neos/core/socketProxy/: CMakeLists.txt
neos/core/socketProxy/include/: socketProxy_linux.h
neos/core/socketProxy/src/: socketProxy_linux.c
neos/core/timing/include/: sleep.h
neos/core/timing/src/: sleep.c
neos/dataStructures/: CMakeLists.txt
neos/dataStructures/dataObject/: CMakeLists.txt
neos/dataStructures/dataObject/include/: dataObject.hpp
neos/dataStructures/dataObject/src/: dataObject.cpp
neos/dataStructures/linkedList/: CMakeLists.txt
neos/dataStructures/linkedList/include/: linkedList.hpp
neos/dataStructures/linkedList/test/: CMakeLists.txt
neos/dataStructures/validReturn/: CMakeLists.txt
neos/dataStructures/validReturn/include/: validReturn.hpp
neos/networking/: CMakeLists.txt
neos/networking/htonAdapter/: CMakeLists.txt
neos/networking/htonAdapter/include/: htonAdapter.h
neos/networking/htonAdapter/src/: htonAdapter.c
neos/networking/socketAdapter/: CMakeLists.txt
neos/networking/socketAdapter/include/: socketAdapter.hpp  socketProxy_linux.h
neos/networking/socketAdapter/src/: socketAdapter.cpp  socketProxy_linux.c
neos/networking/sockets/include/: socketAdapter.hpp
neos/networking/tcpIp/client/: CMakeLists.txt
neos/networking/tcpIp/client/include/: tcpIpClient.hpp
neos/networking/tcpIp/client/src/: tcpIpClient.cpp
neos/networking/tcpIp/common/: CMakeLists.txt
neos/networking/tcpIp/common/include/: ITcpIP.hpp  ITcpIp.hpp  TTcpIp.hpp
neos/networking/tcpIp/common/src/: ITcpIp.cpp
neos/networking/tcpIp/server/: CMakeLists.txt
neos/networking/tcpIp/server/include/: server.hpp  tcpIpServer.hpp
neos/networking/tcpIp/server/src/: server.cpp  tcpIpServer.cpp
neos/networking/tcpIpServer/: CMakeLists.txt
neos/networking/tcpIpServer/include/: tcpIpServer.hpp
neos/networking/tcpIpServer/src/: tcpIpServer.cpp
neos/slotsAndSignals/: CMakeLists.txt
neos/slotsAndSignals/include/: signals.hpp
neos/stateMachine/: CMakeLists.txt
neos/stateMachine/include/: stateMachine.h
neos/stateMachine/src/: stateMachine.c
neos/test/: CMakeLists.txt  LinkedListTest.cpp  SlotsAndSignalsTest.cpp  StateMachine.cpp  ValidReturnTest.cpp
neos/test/DataObjectTest/: DataObjectTest.cpp
neos/test/LinkedListTest/: CMakeLists.txt
neos/test/NetworkingTest/: CMakeLists.txt  NetworkingTest.cpp
neos/test/SlotsAndSignalsTest/: CMakeLists.txt  SlotsAndSignalsTest.cpp
neos/test/StateMachineTest/: CMakeLists.txt  StateMachine.cpp  StateMachineTest.cpp
neos/test/TcpIpServerTest/: CMakeLists.txt  TcpIpServerTest.cpp
neos/test/ValidReturnTest/: CMakeLists.txt
neos/timing/: CMakeLists.txt
neos/timing/include/: sleep.h
neos/timing/src/: sleep.c
neos/unitTests/: CMakeLists.txt
neos/unitTests/DataObjectTest/: CMakeLists.txt
neos/unitTests/LinkedListTest/: CMakeLists.txt
neos/unitTests/NetworkingTest/: CMakeLists.txt  NetworkingTest.cpp
neos/unitTests/SlotsAndSignalsTest/: CMakeLists.txt  SlotsAndSignalsTest.cpp
neos/unitTests/ValidReturnTest/: CMakeLists.txt  ValidReturnTest.cpp
